envoy-gateway/httproute/blue-green-traffic.yaml
# export GTW_IP=$(kubectl get svc eg -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
# curl -H "x-rollout-role: preview" http://$GTW_IP
# curl http://$GTW_IP 
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-green-traffic
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v2
          port: 8080
      matches:
        - headers:
            - name: x-rollout-role
              type: Exact
              value: preview
          path:
            type: PathPrefix
            value: /
