envoy-gateway/httproute/consistent-hash.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: query-parameter-lb-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: query-parameter-lb-route
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: QueryParams
      queryParams:
        - name: lb-query-parameter-first
        - name: lb-query-parameter-second
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: query-parameter-lb-route
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /query-parameter
      backendRefs:
        - name: lb-backend-query-parameter
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-query-parameter
spec:
  selector:
    app: lb-backend-query-parameter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-query-parameter
  labels:
    app: lb-backend-query-parameter
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lb-backend-query-parameter
  template:
    metadata:
      labels:
        app: lb-backend-query-parameter
    spec:
      containers:
        - name: backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
---
