envoy-gateway/httproute/dfp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-dfp
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-url-rewrite
spec:
  parentRefs:
    - name: eg-dfp
  hostnames:
    - www.example.com
  rules:
    - matches:
        - path:
            value: "/get"
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: httpbin.org
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /status/200
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-dynamic-resolver
