envoy-gateway/httproute/extension-ref-not-exists.yaml
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: HTTPRouteFilter
# metadata:
#   namespace: default
#   name: auto-host-rewrite
# spec:
#   urlRewrite:
#     hostname:
#       type: Backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
          filters:
            - type: ExtensionRef
              extensionRef:
                group: gateway.envoyproxy.io
                kind: HTTPRouteFilter
                name: not-exists
      matches:
        - path:
            type: PathPrefix
            value: /not-exists
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: not-exists
