envoy-gateway/httproute/h2c.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-protocol-h2c
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        # This points to a Service with the following ServicePort
        # - protocol: TCP
        #   appProtocol: kubernetes.io/h2c
        #   port: 8081
        #   targetPort: 3001
        - name: infra-backend
          port: 8081
