envoy-gateway/httproute/helloworld.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - kind: Service
          name: helloworld
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
