envoy-gateway/httproute/mixed-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weight-mixed-backendref
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mixed-valid-and-invalid
      backendRefs:
        - name: backend
          port: 3000
          weight: 5
        - name: backend-not-existing
          port: 3000
          weight: 5
