envoy-gateway/httproute/weight.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weight-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 8
        - kind: Service
          name: infra-backend-v2
          port: 8080
          weight: 2
      matches:
        - path:
            type: PathPrefix
            value: /
